--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lampadina on/off</title>
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
 
     <h1>Ciao sono una lampadina, mi puoi accendere e spegnere</h1>
+    <img id="whitelamp" class="lamp-visible" src="./img/white_lamp.png">
+    <img id="yellowlamp" class="lamp-invisible" src="./img/yellow_lamp.png">
+    <button id="button">Accendi</button>
 
     <script src="./js/main.js"></script>
 </body>
