riposizionamento elementi in pagina

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="bg-dark text-white d-flex flex-column justify-content-center align-items-center">
+<body class="bg-dark text-white d-flex justify-content-center align-items-center">
 
     <div>
         <h1>Premi il bottone per accendere la lampadina</h1>
@@ -22,9 +22,11 @@
         <img id="whitelamp" class="lamp-visible" src="./img/white_lamp.png">
         <img id="yellowlamp" class="lamp-invisible" src="./img/yellow_lamp.png">
     </div>
+    
     <div>
         <button id="button">Accendi</button>
     </div>
+
     <script src="./js/main.js"></script>
 </body>
 
