--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="bg-dark text-white d-flex justify-content-center align-items-center">
+<body class="bg-dark">
 
-    <div>
-        <h1>Premi il bottone per accendere la lampadina</h1>
-    </div>
+    <div class="text-white d-flex justify-content-center align-items-center">
+        <div>
+            <h1>Premi il bottone per accendere la lampadina</h1>
+        </div>
 
-    <div>
-        <img id="whitelamp" class="lamp-visible" src="./img/white_lamp.png">
-        <img id="yellowlamp" class="lamp-invisible" src="./img/yellow_lamp.png">
-    </div>
-    
-    <div>
-        <button id="button">Accendi</button>
-    </div>
+        <div>
+            <img id="whitelamp" class="lamp-size lamp-visible" src="./img/white_lamp.png">
+            <img id="yellowlamp" class="lamp-size img-crop lamp-invisible" src="./img/yellow_lamp.png">
+        </div>
 
+        <div>
+            <button id="button">Accendi</button>
+        </div>
+    </div>
     <script src="./js/main.js"></script>
 </body>
 
