sostituito il nome dell'id button in quanto andava in conflitto con bootstrap

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <h1>Premi il bottone per accendere la lampadina</h1>
         </div>
 
-        <div>
+        <div class="p-3">
             <img id="whitelamp" class="lamp-size lamp-visible" src="./img/white_lamp.png">
             <img id="yellowlamp" class="lamp-size img-crop lamp-invisible" src="./img/yellow_lamp.png">
         </div>
 
         <div>
-            <button id="button">Accendi</button>
+            <button id="onoff" type"button" class="">Accendi</button>
         </div>
     </div>
     <script src="./js/main.js"></script>
