aggiunto style al button

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
         </div>
 
         <div>
-            <button id="onoff" type"button" class="">Accendi</button>
+            <button id="onoff" type="button" class="btn btn-warning" >Accendi</button>
         </div>
     </div>
+
+    
     <script src="./js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
