button style migliorato

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div>
-            <button id="onoff" type="button" class="btn btn-warning" >Accendi</button>
+            <button id="onoff" type="button" class="btn btn-outline-warning" >Accendi</button>
         </div>
     </div>
 
