aggiunto style body

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="bg-dark">
+<body id="body-light" class="bg-dark">
 
-    <div class="text-white d-flex justify-content-center align-items-center">
+    <div class="positioning container rounded-5 bg-dark text-white d-flex justify-content-center align-items-center">
         <div>
-            <h1>Premi il bottone per accendere la lampadina</h1>
+            <h1 class="text-wrap">Premi il bottone per accendere la lampadina</h1>
         </div>
 
-        <div class="p-3">
+        <div>
             <img id="whitelamp" class="lamp-size lamp-visible" src="./img/white_lamp.png">
             <img id="yellowlamp" class="lamp-size img-crop lamp-invisible" src="./img/yellow_lamp.png">
         </div>
